[gd_scene load_steps=2 format=3 uid="uid://dy7kvute85kar"]

[ext_resource type="Script" uid="uid://vrttt6lbr7ky" path="res://scripts/ui/RegisterPanel.gd" id="1"]

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
text = "Назад"

[node name="Register#Email" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 233.0
offset_right = 679.0
offset_bottom = 264.0
placeholder_text = "Email"

[node name="Register#Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 276.0
offset_right = 680.0
offset_bottom = 307.0
placeholder_text = "Password"
secret = true

[node name="LanguageContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 190.0
offset_right = 680.0
offset_bottom = 225.0

[node name="LanguageLabel" type="Label" parent="LanguageContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Language"

[node name="LanguageOption" type="OptionButton" parent="LanguageContainer"]
layout_mode = 2
size_flags_vertical = 1
item_count = 3
selected_index = 0
popup/item_0/text = "English"
popup/item_1/text = "Ukrainian"
popup/item_2/text = "Polish"

[node name="Register#RegisterButton" type="Button" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 323.0
offset_right = 591.0
offset_bottom = 354.0
text = "Register"
